fix: counter-area spacing

--- a/css/style.css
+++ b/css/style.css
@@ -6151,8 +6151,6 @@ body.admin-bar .header-menu-area.sticky_menu {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0;
-  margin: 80px 0;
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .book-appointment-area {
