--- a/sass/modules/_counter-area.scss
+++ b/sass/modules/_counter-area.scss
@@ -31,8 +31,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0;
-    margin: 80px 0;
+    // padding: 0;
+    // margin: 80px 0;
     @include lg {
         display: grid;
         grid-template-columns: auto;
